--- a/dev/Building Modules.html
+++ b/dev/Building Modules.html
@@ -9,7 +9,34 @@
 <h1> Building Modules </hi>
 
 <h2> Overview </h2>
-<p>A DNN <b>module</b> is custom code that extends the functionality of the DNN platform. A module can generate dynamic content that is displayed in a pane of a webpage or an internal value that is passed on to another module. <!-- Is the second part true? --> </p>
+<p>A DNN <b>module</b> is custom code that extends the functionality of the DNN platform. For example, a module:
+    <ul>
+        <li>can generate dynamic content, which is displayed in a pane of a webpage, or </li>
+        or display content from another source
+        <li>edit content .
+        or manage data
+        or change database configuration
+        or provide administrative functions.
+        or provide other functionality.
+        </li>
+    </ul>
+</p>
+
+<p><b>Example:</b> If you want a pane to display a stock ticker or a weather forecast, you can build a module to do so.</p>
+
+<p>
+</p>
+<p>
+</p>
+<p>
+</p>
+<p>
+</p>
+<p>
+</p>
+
+
+
 
 <!-- diagram of a module? -->
 
@@ -24,7 +51,6 @@
 
 
 <h2> How to Build a Module </h2>
-
 
 <h3>Prerequisites</h3>
 
@@ -67,6 +93,13 @@
 
 
 </ol>
+
+
+<h2> Sources </h2>
+<ul>
+    <li>DNN Wiki: <a href="http://www.dnnsoftware.com/wiki/module-development">Module Development</a></li>
+    <li>DNN Community Blog: <a href="http://www.dnnsoftware.com/community-blog/cid/155064/module-development-for-non-developers-skinners-dnn-beginners--blog-series-intro">Module Development</a> series by <a href="http://www.dnnsoftware.com/Activity-Feed/userId/710933">Clinton Patterson</a></li>
+</ul>
 
 
 <!--
