--- a/design/Building Themes/Create Layout Template.html
+++ b/design/Building Themes/Create Layout Template.html
@@ -17,100 +17,105 @@
         <ul>
             <li>The layout template must contain at least one pane.</li>
             <li>Exactly one of the panes must be called <b>ContentPane</b>.</li>
-            <li>All panes must be defined as a server control by adding <b>runat="server"</b> to the element.</li>
+            <li>All panes must be defined as a server control by adding <b>runat="server"</b> to the element.</li> <!-- Joe will confirm. -->
             <li>DNN recognizes only the folowing HTML elements as valid panes: &lt;td&gt; (table cells), &lt;div&gt;, &lt;p&gt;, and &lt;span&gt;.
         </ul>
     </p>
-    <p><b>Example:</b> A very basic layout template. <!-- Is this the same for ASCX? -->
-        <xmp>
-            <div id="wrapper">
-                 <div id="ContentPane" runat="server"></div>
-            </div>
-        </xmp>
+
+    <p><b>Example:</b> A very basic layout template.
+        <ul>
+            <li>HTML
+                <xmp>
+    <div id="ContentPane" runat="server"></div>
+                </xmp>
+            </li>
+            <li>ASCX
+                <xmp>
+    <%@ Control language="vb" AutoEventWireup="false" Explicit="True" Inherits="DotNetNuke.UI.Skins.Skin" %>
+    <div id="ContentPane" runat="server"></div>
+                </xmp>
+            </li>
+        </ul>
     </p>
-    <p><b>Example:</b> A layout template with several panes, a header, and a footer. <!-- Is this the same for ASCX? -->
-        <xmp>
-            <div id="wrapper">
-                 <div id="header"></div>
-                 <div id="sidebar">
-                      <div id="feed">
-                            <a class="feed-button" href="#">&nbsp;</a>
-                      </div>
-                      <div id="SidebarPane" class="SidebarPane" runat="server"></div>
-                      <div id="sidebar-bottom">&nbsp;</div>
-                 </div>
-                 <div id="content">
-                      <div id="BannerPane" class="BannerPane" runat="server"></div>
-                      <div id="ContentPane" runat="server"></div>
-                 </div>
-                 <div id="footer"></div>
-            </div>
-        </xmp>
+
+    <p><b>Example:</b> A layout template with several panes, a header, a footer, and a LOGO theme object.
+        <ul>
+            <li>HTML
+                <xmp>
+    <div id="wrapper">
+         <div id="header">
+            [LOGO]
+         </div>
+         <div id="sidebar">
+              <div id="feed">
+                    <a class="feed-button" href="#">&nbsp;</a>
+              </div>
+              <div id="SidebarPane" class="SidebarPane" runat="server"></div>
+              <div id="sidebar-bottom">&nbsp;</div>
+         </div>
+         <div id="content">
+              <div id="BannerPane" class="BannerPane" runat="server"></div>
+              <div id="ContentPane" runat="server"></div>
+         </div>
+         <div id="footer"></div>
+    </div>
+                </xmp>
+            </li>
+            <li>ASCX
+                <xmp>
+    <%@ Control language="vb" AutoEventWireup="false" Explicit="True" Inherits="DotNetNuke.UI.Skins.Skin" %>
+    <%@ Register TagPrefix="dnn" TagName="LOGO" Src="~/Admin/Skins/Logo.ascx" %>
+    <div id="wrapper">
+         <div id="header">
+            <dnn:LOGO runat="server" id="dnnLOGO" />
+         </div>
+         <div id="sidebar">
+              <div id="feed">
+                    <a class="feed-button" href="#">&nbsp;</a>
+              </div>
+              <div id="MySidebarPane" class="SidebarPane" runat="server"></div>
+              <div id="sidebar-bottom">&nbsp;</div>
+         </div>
+         <div id="content">
+              <div id="MyBannerPane" class="MyBannerPane" runat="server"></div>
+              <div id="ContentPane" runat="server"></div>
+
+         </div>
+         <div id="footer"></div>
+    </div>
+                </xmp>
+            </li>
+        </ul>
     </p>
-    <p><b>Tip:</b> Add a class attribute to each of the pane controls, because ASP.NET will modify the control names when the page is rendered.</p> <!-- Not sure what this means. Is this still true? -->
+
+    <p><b>Tip:</b> ASP.NET might modify the control names (e.g., <b>div id</b>) when the page is rendered to avoid duplicate control names in a page. Instead of depending on the control name when styling, add a <b>class</b> attribute to each of the controls and refer to those class attributes in your CSS.</p>
 </li>
 
 <li> (Optional) Add theme objects to any pane for a more dynamic page.
-
-    <table width=100% border=1>
-    <tr align=center><th width=50%>HTML</th><th width=50%>ASCX</th></tr>
-    <tr valign=top>
-        <td>
-            <p>You can use the HTML token.<p>
-            <p><b>Example:</b> <!-- Is this correct? -->
+    <ul>
+        <li>In HTML, you can use the HTML token (e.g., <code>[LOGIN]</code>).
+            <p><b>Example:</b>
                 <xmp>
     <div id="login_style" class="user">
         [LOGIN]
     </div>
                 </xmp>
             </p>
-        </td>
-        <td>
-            <p>You can use the ASCX token.</p>
-            <p><b>Example:</b> <!-- Is this correct? -->
+        </li>
+        <li>In ASCX, you must register the ASCX token (e.g., <code>&lt;dnn:Login ...</code>) before using it for the first time in the file.
+            <p><b>Example:</b>
                 <xmp>
+    <%@ Register TagPrefix="dnn" TagName="Login" Src="~/Admin/Skins/login.ascx" %>
+    ...
     <div id="login_style" class="user">
         <dnn:Login runat="server" id="dnnLogin" CssClass="user" />
     </div>
                 </xmp>
             </p>
-        </td>
-    </tr>
+        </li>
+    </ul>
 
-    <tr valign=top>
-        <td>You can use the HTML <b>object</b> and <b>param</b> tags.
-        <!-- When do you use this and when do you use "[LOGIN]"? -->
-            <p><b>Note:</b> In the <b>object</b> tag,
-                <ul>
-                    <li>The <b>codebase</b> attribute specifies the theme object to be rendered.</li>
-                    <li>The <b>codetype</b> attribute must be <code>dotnetnuke/server</code> for all theme objects.</li>
-                </ul>
-            </p>
-            <p><b>Example:</b>
-                <xmp>
-    <div id="login_style" class="user">
-        <object id="dnnLOGIN" codebase="LOGIN" codetype="dotnetnuke/server">
-            <param name="CssClass" value="user"/>
-        </object>
-    </div>
-                </xmp>
-            </p>
-        </td>
-        <td>
-            <p>You can use the Register.</p> <!-- Is this what it's called? When do you use this as opposed to the ASCX token? -->
-            <p><b>Example:</b>
-                <xmp>
-    <div id="login_style" class="user">
-        <%@ Register TagPrefix="dnn" TagName="Login" Src="~/Admin/Skins/login.ascx" %>
-    </div>
-                </xmp>
-            </p>
-        </td>
-        </td>
-    </tr>
-    </table>
-
-    <p>A default DNN installation includes the following theme objects:</p>
+    <p>A default DNN installation includes the following theme objects:</p>  <!-- Send email to Joe for the current list. -->
     <table width=100%>
     <tr>
         <td valign=top>
@@ -144,9 +149,10 @@
         </td>
     </tr>
     </table>
-    <p><object width="100%" data="../../common/bptext/BP-TipSkinningTool.html"></object></p>
+
     <p>
         <!--#include file="../../common/bptext/BP-TipSkinningTool.html" -->
+        <object width="100%" data="../../common/bptext/BP-TipSkinningTool.html"></object>
     </p>
 </li>
 
