[DOC-22] Additional tweaks based on http://www.dnnsoftware.com/community-blog/cid/155070/installing-dnn.

--- a/dev/Building Modules/Set up Dev Environment.html
+++ b/dev/Building Modules/Set up Dev Environment.html
@@ -43,7 +43,11 @@
 <!-- Need a link to the What's New > Breaking Changes page. -->
 
 
-<li><b>Decide among the DNN Platform, Evoq Content, and Evoq Engage.</b> The DNN Platform is the free open-source package; the Evoq (both Content and Engage) adds custom functionality over the Community Edition.
+<li><b><a href="http://www.dnnsoftware.com/products/compare-dnn-platform-to-evoq">Choose a DNN product.</a></b>
+    <ul>
+        <li>The DNN Platform is the free open-source package.
+        <li>Evoq (both Content and Engage) adds custom functionality over the DNN Platform.
+    </ul>
 </li>
 
 <li><b>Check the <a href="http://www.dnnsoftware.com/platform/start/install">requirements</a> and install the appropriate versions for the chosen DNN version.</b>
@@ -51,16 +55,6 @@
 
 <li><b>Download the <a href="http://www.dnnsoftware.com/community/download">DNN Platform</a>.</b>
     <p><b>Note:</b> For module development, you won't need the source files.</p>
-</li>
-
-<li><b>Set up IIS.</b>
-    <ul>
-        <li>Create a new website and point to the folder where you installed the DNN Platform.
-            <p><b>Note:</b> If you use an existing IIS website, add the HOST binding for DNNDEV.ME in IIS.</p>
-        </li>
-        <li>For IIS 5 or IIS 6, verify that ASP.NET 2.0 is selected on the ASP.NET tab.</li>
-
-    </ul>
 </li>
 
 <li><b>Set file permissions for the DNN installation folder to Full or Modify.</b>
@@ -124,6 +118,15 @@
     </ol>
 </li>
 
+<li><b>Set up IIS.</b>
+    <ul>
+        <li>Create a new website and point to the folder where you installed the DNN Platform.
+            <p><b>Note:</b> If you use an existing IIS website, add the HOST binding for DNNDEV.ME in IIS.</p>
+        </li>
+        <li>For IIS 5 or IIS 6, verify that ASP.NET 2.0 is selected on the ASP.NET tab.</li>
+    </ul>
+</li>
+
 <li><b>Run the DNN Installation Wizard.</b> <!-- Verify the actual names of the UI objects. Need screenshots. -->
     <ol>
         <li>Open your website (http://dnndev.me) in a browser.</li>
@@ -163,6 +166,7 @@
 <h2>Sources</h2>
 <ul>
     <li><a href="http://www.dnnsoftware.com/wiki/setting-up-your-module-development-environment">Setting up Your Module Development Environment</a></li>
+    <li><a href="http://www.dnnsoftware.com/community-blog/cid/155070/installing-dnn">Installing DNN</a> by <a href="http://www.dnnsoftware.com/activity-feed/userid/710933">Clinton Patterson</a></li>
 </ul>
 
 <!-- In a footnote, document what environment (with versions) I use for screenshots. -->
