[DOC-23] Continuing Intro to Modules.html. [DOC-16] Continuing Building Modules.html. Added pages.

--- a/dev/Building Modules.html
+++ b/dev/Building Modules.html
@@ -9,22 +9,15 @@
 <h1> Building Modules </hi>
 
 <h2> Overview </h2>
-<p>A DNN <b>module</b> is custom code that extends the functionality of the DNN platform. For example, a module:
+<p>You can create a module by:
     <ul>
-        <li>can generate dynamic content, which is displayed in a pane of a webpage, or </li>
-        or display content from another source
-        <li>edit content .
-        or manage data
-        or change database configuration
-        or provide administrative functions.
-        or provide other functionality.
-        </li>
-    </ul>
-</p>
+        <li><a href="Building%20Modules/Build%20Module%20with%20MSVS.html">using Microsoft Visual Studio</a>,</li>
+        <li><a href="Building%20Modules/Build%20Module%20with%20DNN%20Module%20Creator.html">using the DNN <b>Module Creator</b>, or</li>
+        <li><a href="Building%20Modules/Build%20Module%20with%20Template.html">starting with the module development templates</a>.</li>
 
-<p><b>Example:</b> If you want a pane to display a stock ticker or a weather forecast, you can build a module to do so.</p>
 
 <p>
+
 </p>
 <p>
 </p>
