--- a/dev/Building Modules/Build Module with DNN Module Creator.html
+++ b/dev/Building Modules/Build Module with DNN Module Creator.html
@@ -6,16 +6,14 @@
 
 <!-- .. include:: /../common/stub-topic.txt -->
 
-<h1> Customize the Module Development Templates </hi>
+<h1> Build a Module with DNN Module Creator </hi>
 
 <h2> Overview </h2>
 
 
 <h2> Prerequisites </h2>
 
-<ul>
-    <li><object width="100%" data="..\common\bptext\BP-PrereqHost.html"></object></li>
-</ul>
+
 
 
 <h2> Steps </h2>
