--- a/main/DNN 8 Requirements.html
+++ b/main/DNN 8 Requirements.html
@@ -46,11 +46,11 @@
 
 <b>Browsers</b>
 <ul>
+	<li>Chrome</li>
+	<li>Firefox</li>
 	<li>IE 9+</li>
 	<li>Microsoft Edge</li>
-	<li>Firefox</li>
-	<li>Chrome</li>
-	<li>Safari</li>
+	<li>Safari for Mac</li>
 </ul>
 
 
