Update initial theme

--- a/common/themes/bootstrap/layout.html
+++ b/common/themes/bootstrap/layout.html
@@ -1,55 +1,27 @@
 {% extends "basic/layout.html" %}
 
 {% set theme_css_files = [] %}
-{% if theme_bootstrap_version == "3" %}
-  {% set bootstrap_version, bootstrap_additional_css, navbar_version = "3.3.4", "theme", "" %}
-  {% set bs_span_prefix = "col-md-" %}
-{% else %}
-  {% set bootstrap_version, bootstrap_additional_css, navbar_version = "2.3.2", "responsive", "-2" %}
-  {% set bs_span_prefix = "span" %}
-{% endif %}
 
-{% if theme_bootswatch_theme and theme_bootswatch_theme != "\"\"" %}
-  {# BS2 needs "bootstrap-responsive.css". BS3 doesn't. #}
-  {% if theme_bootstrap_version == "3" %}
-    {% set theme_css_files = theme_css_files + [
-        '_static/bootswatch-' + bootstrap_version + '/' + theme_bootswatch_theme + '/bootstrap.min.css',
-        '_static/bootstrap-sphinx.css'
-      ]
-    %}
-  {% else %}
-    {% set theme_css_files = theme_css_files + [
-        '_static/bootswatch-' + bootstrap_version + '/' + theme_bootswatch_theme + '/bootstrap.min.css',
-        '_static/bootstrap-' + bootstrap_version + '/css/bootstrap-' + bootstrap_additional_css + '.min.css',
-        '_static/bootstrap-sphinx.css'
-      ]
-    %}
-  {% endif %}
-{% else %}
-  {% set theme_css_files = theme_css_files + [
-      '_static/bootstrap-' + bootstrap_version + '/css/bootstrap.min.css',
-      '_static/bootstrap-' + bootstrap_version + '/css/bootstrap-' + bootstrap_additional_css + '.min.css',
-      '_static/bootstrap-sphinx.css'
-    ]
-  %}
-{% endif %}
+{% set theme_css_files = theme_css_files + [
+    '_static/bootstrap-3.3.4/css/bootstrap.min.css',
+    '_static/bootstrap-sphinx.css',
+    '_static/bootstrap-custom.css'
+  ]
+%}
 
-{% if not bootswatch_css_custom %}
-  {% set bootswatch_css_custom = [] %}
-{% endif %}
-{% set css_files = css_files + theme_css_files + bootswatch_css_custom %}
+{% set css_files = css_files + theme_css_files %}
 
 {% set script_files = script_files + [
     '_static/js/jquery-1.11.0.min.js',
     '_static/js/jquery-fix.js',
-    '_static/bootstrap-' + bootstrap_version + '/js/bootstrap.min.js',
+    '_static/bootstrap-3.3.4/js/bootstrap.min.js',
     '_static/bootstrap-sphinx.js'
   ]
 %}
 
 {%- set render_sidebar = (not embedded) and (not theme_nosidebar|tobool) and sidebars %}
 
-{%- set bs_content_width = render_sidebar and "9" or "12"%}
+{%- set bs_content_width = render_sidebar and "9" or "12" %}
 
 {%- block doctype -%}
 <!DOCTYPE html>
@@ -57,34 +29,20 @@
 
 {# Sidebar: Rework into our Bootstrap nav section. #}
 {% macro navBar() %}
-{% include "navbar" + navbar_version + ".html" %}
+{% include "navbar.html" %}
 {% endmacro %}
 
-{% if theme_bootstrap_version == "3" %}
-  {%- macro bsidebar() %}
-      {%- if render_sidebar %}
-      <div class="{{ bs_span_prefix }}3">
-        <div id="sidebar" class="bs-sidenav" role="complementary">
-          {%- for sidebartemplate in sidebars %}
-            {%- include sidebartemplate %}
-          {%- endfor %}
-        </div>
+{%- macro bsidebar() %}
+    {%- if render_sidebar %}
+    <div class="col-md-3">
+      <div id="sidebar" class="bs-sidenav" role="complementary">
+        {%- for sidebartemplate in sidebars %}
+          {%- include sidebartemplate %}
+        {%- endfor %}
       </div>
-      {%- endif %}
-  {%- endmacro %}
-{% else %}
-  {%- macro bsidebar() %}
-      {%- if render_sidebar %}
-      <div class="{{ bs_span_prefix }}3">
-        <div id="sidebar" class="bs-sidenav well" data-spy="affix">
-          {%- for sidebartemplate in sidebars %}
-            {%- include sidebartemplate %}
-          {%- endfor %}
-        </div>
-      </div>
-      {%- endif %}
-  {%- endmacro %}
-{% endif %}
+    </div>
+    {%- endif %}
+{%- endmacro %}
 
 {%- block extrahead %}
 <meta charset='utf-8'>
@@ -104,7 +62,7 @@
 <div class="container">
   <div class="row">
     {%- block sidebar1 %}{{ bsidebar() }}{% endblock %}
-    <div class="{{ bs_span_prefix }}{{ bs_content_width }} content">
+    <div class="col-md-{{ bs_content_width }} content">
       {% block body %}{% endblock %}
     </div>
     {% block sidebar2 %} {# possible location for sidebar #} {% endblock %}
