[DOC-5] Added data access layer (DAL).

--- a/main/Glossary.html
+++ b/main/Glossary.html
@@ -19,6 +19,9 @@
 <dt>CTP</dt>
     <dd>...</dd>
 
+<dt>data access layer (DAL)</dt>
+    <dd>The set of scripts and other files that are required by a module to access the database. This layer includes scripts of both the abstract data provider and the concrete data provider.</dd> <!-- Is this correct? -->
+
 <dt>Dynamic Content Creator (DCC)</dt>
     <dd>...</dd>
 
